--- a/catalog/templates/catalog/item_status_list_borrowed_user.html
+++ b/catalog/templates/catalog/item_status_list_borrowed_user.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     <h2>Things You Borrowed</h2>
-
+<div style="margin-left:30px;margin-top:20px">
+<hr>
   <h4> Books </h4>
     {% if item_status_list %}
     <ul>
@@ -23,12 +24,12 @@
     {% else %}
       <p>There are no books borrowed.</p>
     {% endif %}
-
-<h4> Comics <h4>
+<hr>
+<h4> Comics </h4>
     {% if item_status_list %}
     <ul>
 
-   {% for itst in item_status_list %}
+      {% for itst in item_status_list %}
          {% if itst.item.item_type.type == "Comic" %}
     <li>
 <form action="{% url 'pass-borrower' itst.id %}" method="post">
@@ -40,16 +41,19 @@
      </li>
       {% endfor %}
     </ul>
-
-    {% else %}
-      <p>There are no books borrowed.</p>
     {% endif %}
+
+<hr>
+</div>
+<br>
 
     <h2>Things You Loaned</h2>
 
+<div style="margin-left:30px;margin-top:20px">
+<hr>
   <h4> Books </h4>
 
-  {% if Loaned_list %}
+    {% if Loaned_list %}
     <ul>
       {% for thing in Loaned_list %}
          {% if thing.item.item_type.type == "Book" %}
@@ -59,16 +63,12 @@
 {% csrf_token %}
         <input type="submit" value="Mark Returned"<button class="btn btn-default btn-xs" type="button" style="color:#000000"/></button>
 </form>
-      {% else %}
-          <p> You currently have no books on loan </p>
       {% endif %}
     </li>
       {% endfor %}
     </ul>
-    {% else %}
-      <p>You currently have no books on loan</p>
     {% endif %}
-
+<hr>
   <h4> Comics </h4>
     {% if Loaned_list %}
     <ul>
@@ -84,11 +84,13 @@
     </li>
       {% endfor %}
     </ul>
-    {% else %}
-      <p>You currently have no comics on loan</p>
     {% endif %}
+</div>
+<br>
 
 <h2> Things You Share </h2>
+<div style="margin-left:30px;margin-top:20px">
+<hr>
 
     <h4> Books </h4>
     {% if Other_list %}
@@ -99,16 +101,14 @@
  <form action="{% url 'pass-borrower' thing.id %}" method="post">
         <a href="{% url 'books-detail' thing.item.bookit.get.id %}">{{thing.item.bookit.get.title}}</a>
 {% csrf_token %}
-       <input type="submit" value="Loan"<button class="btn btn-default btn-xs" type="button" style="color:#000000"/></button>
+        <input type="submit" value="Loan"<button class="btn btn-default btn-xs" type="button" style="color:#000000"/></button>
 </form>
       {% endif %}
     </li>
       {% endfor %}
     </ul>
-    {% else %}
-      <p>All your books are on loan</p>
     {% endif %}
-
+<hr>
     <h4> Comics </h4>
 
 {% if Other_list %}
@@ -126,30 +126,6 @@
     </li>
       {% endfor %}
     </ul>
-    {% else %}
-      <p>All your comics are on loan</p>
     {% endif %}
+</div>
   {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
