--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -27,7 +27,7 @@
     <li><a href="{% url 'index' %}">Home</a></li>
     <li><a href="{% url 'books' %}">Books</a></li>
     <li><a href="{% url 'comics' %}">Comics</a></li>
-    <li><a href="{% url 'my-books' %}">My Books</a></li>
+    <li><a href="{% url 'my-books' %}">My Stuff</a></li>
     <li><a href="{% url 'add_item' %}">Add Something</a></li>
     <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
   {% else %}
