--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -7,7 +7,8 @@
 
 
 <h3>New Feature : Full functionality for comics has been added!</h3>
-
+<h4> Bug fixes for adding comics have been released : Month and Number can now be left blank for non-serial items </h4>
+<br>
   <ul>
     <li><strong>We are currently lending {{ num_books }} books and {{ num_comics}} {% if num_comics == 1 %} comic{% else %} comics{% endif %}! </strong> </li>
   </ul>
