Attemp to push code again

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -7,12 +7,22 @@
 
 
 <h3>New Feature : Full functionality for comics has been added!</h3>
-<h4> Bug fixes for adding comics have been released : Month and Number can now be left blank for non-serial items </h4>
-<br>
+
   <ul>
     <li><strong>We are currently lending {{ num_books }} books and {{ num_comics}} {% if num_comics == 1 %} comic{% else %} comics{% endif %}! </strong> </li>
   </ul>
 
 <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}</p>
+<br>
+
+<p><strong> The following Books have been requested! </p> </strong>
+{% for thing in reqitem %}
+    {% if thing.item.owned_by == request.user %}
+
+<li>
+{{thing.item.bookit.get.title}} ({{thing.requester}})
+</li>
+    {% endif %}
+{% endfor %}
 
 {% endblock %}
