--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -14,16 +14,16 @@
 
 <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}</p>
 <br>
-
+{% if reqcount > 0 %}
 <h4  style="color:green"> <strong> Requests:</h4>
-{% for thing in reqitem %}
-    {% if thing.item.owned_by == request.user %}
+    {% for thing in reqitem %}
+        {% if thing.item.owned_by == request.user %}
 
-<li style="color:green">
-{{thing.item.bookit.get.title}} ({{thing.requester}})
-</strong>
-</li>
-    {% endif %}
-{% endfor %}
-
+           <li style="color:green">
+           {{thing.item.bookit.get.title}} ({{thing.requester}})
+            </li>
+        {% endif %}
+    {% endfor %}
+        </strong>
+{% endif %}
 {% endblock %}
