Bug fixes, Comic requests

--- a/catalog/templates/catalog/comic_detail.html
+++ b/catalog/templates/catalog/comic_detail.html
@@ -24,5 +24,18 @@
     <p><strong> Owner: {{comic.item.owned_by}}</strong></p>
  {% endif %}
  {% endfor %}
+{% if comic.item.owned_by != request.user %}
+<form action="{% url 'issue-comic-request' comic.id %}" method="post">
+{% csrf_token %}
+        <input type="submit" value="Request Comic"<button class="btn btn-default btn-xs" type="button" style="color:#000000"/></button>
+</form>
+{% endif %}
   </div>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 {% endblock %}
