--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -6,7 +6,8 @@
   <p>Welcome to <em>Swapsies</em>, a very basic Django website developed to share items!</p>
 
 
-<h3>New Feature : Books can now be requested through the app!</h3>
+<h3>New Feature : Comics and books can be requested through the app!</h3>
+<h4> Bug Fixes: Home page now requires authentication.  Requests will only show if they are yours'</h4>
 
   <ul>
     <li><strong>We are currently lending {{ num_books }} books and {{ num_comics}} {% if num_comics == 1 %} comic{% else %} comics{% endif %}! </strong> </li>
