--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -7,7 +7,7 @@
 
 
 <h3>New Feature : Comics and books can be requested through the app!</h3>
-<h4> Bug Fixes: Home page now requires authentication.  Requests will only show if they are yours'</h4>
+<h4> Bug Fixes: Home page now requires authentication. Only current user requests show.</h4>
 
   <ul>
     <li><strong>We are currently lending {{ num_books }} books and {{ num_comics}} {% if num_comics == 1 %} comic{% else %} comics{% endif %}! </strong> </li>
