--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -6,7 +6,7 @@
   <p>Welcome to <em>Swapsies</em>, a very basic Django website developed to share items!</p>
 
 
-<h3>New Feature : Comics and books can be requested through the app!</h3>
+<h3>New Feature : Searchbars for Comics and Books</h3>
 <h4> Bug Fixes: Home page now requires authentication. Only current user requests show.</h4>
 
   <ul>
