--- a/catalog/templates/catalog/add_book_form.html
+++ b/catalog/templates/catalog/add_book_form.html
@@ -7,7 +7,7 @@
 <form action="" method="post">
     {% csrf_token %}
     <table>
-    {{ form.as_table }}
+    {{ form.as_p }}
     </table>
 
     <input type="submit" value="Submit"<button class="btn btn-default btn-sm" type="button" style="color:#000000"/></button> <a href="{% url 'index' %}"<button class="btn btn-default btn-sm" type="button" style="color: #000000">Cancel</button></a>
