--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -6,7 +6,7 @@
   <p>Welcome to <em>Swapsies</em>, a very basic Django website developed to share items!</p>
 
 
-<h3>New Feature : Searchbars for Comics and Books</h3>
+<h3>New Feature : Searchbars and Update </h3>
 <h4> Bug Fixes: Fixed comic request key bug. Removed session counter.</h4>
 
   <ul>
