--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -11,7 +11,7 @@
     {% endfor %}
 <br>
 <h4>New Feature : Approve or deny requests & Notification of request approval/denial </h4>
-<h5> Bug Fixes: Cleaned up home page</h5>
+<h5> Cleaned up home page</h5>
 
   <ul>
     <li><strong>We are currently lending {{ num_books }} books and {{ num_comics}} {% if num_comics == 1 %} comic{% else %} comics{% endif %}! </strong> </li>
