Copy paste error

--- a/catalog/templates/catalog/inactive_user.html
+++ b/catalog/templates/catalog/inactive_user.html
@@ -1,4 +1,4 @@
-ck content %}
+{% block content %}
 <div class="padded" style="color:black">
 <br></br>
     <h2> Looks like you are trying to create an inactive user </h2>
