Fix bugs and update release notes

--- a/catalog/templates/catalog/comic_list.html
+++ b/catalog/templates/catalog/comic_list.html
@@ -13,7 +13,7 @@
 
       {% for comic in comic_list %}
       <li>
-        <a href="{{ comic.pk }}">{{ comic.item }}</a>
+        <a href="{{ comic.pk }}">{{ comic.title }}</a>
       </li>
       {% endfor %}
 
