--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -11,7 +11,7 @@
     {% endfor %}
 <br>
 <h4>New Feature : Assign a loan to a non-member</h4>
-<h5> No loaning to yourself, Multi requests per item allowable, function refactor</h5>
+<h5> Bug fixes on add item page and comic update page</h5>
   <ul>
     <li><strong>We are currently lending {{ num_books }} books and {{ num_comics}} {% if num_comics == 1 %} comic{% else %} comics{% endif %}! </strong> </li>
   </ul>
