Author name reversal on book detail

--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -14,8 +14,8 @@
 {% endif %}
 
 <br>
-<p><strong>Author:</strong> <a href="">{{ book.author_first }}, {{book.author_last}}</a></p> <!-- author detail link not yet defined -->
-  <p><strong>Copyright:</strong> {{ book.publisher }} {{book.year}}</p>
+<p><strong>Author:</strong> <a href="">{{ book.author_last }}, {{ book.author_first }}</a></p> <!-- author detail link not yet defined -->
+  <p><strong>Copyright:</strong> {{ book.publisher }} {{ book.year }}</p>
   <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
   <div style="margin-left:20px;margin-top:20px">
   <div style="margin-left:20px;margin-top:20px">
